Fixed NPoco references that were lost when the csproj files were corrected. Added new results

--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -66,6 +66,7 @@
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="NPoco" Version="5.1.2" />
+    <PackageReference Include="NPoco.SqlServer" Version="5.1.2" />
     <PackageReference Include="PetaPoco.Compiled" Version="6.0.480" />
     <PackageReference Include="RepoDb" Version="1.12.7" />
     <PackageReference Include="RepoDb.SqlServer" Version="1.1.3" />
