--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -71,6 +71,7 @@
       <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
       <PackageReference Include="NHibernate" Version="5.3.8" />
       <PackageReference Include="NPoco" Version="5.1.2" />
+      <PackageReference Include="NPoco.SqlServer" Version="5.1.2" />
       <PackageReference Include="PetaPoco.Compiled" Version="6.0.480" />
       <PackageReference Include="RepoDb" Version="1.12.7" />
       <PackageReference Include="RepoDb.SqlServer" Version="1.1.3" />
