Updated to latest nuget packages, fixed compiler issue with Linq2DB, ran pre-merge results afterwards

--- a/LLBLGenPro/DatabaseGeneric/AdventureWorks.Dal.Adapter.csproj
+++ b/LLBLGenPro/DatabaseGeneric/AdventureWorks.Dal.Adapter.csproj
@@ -6,6 +6,6 @@
     <RootNamespace>AdventureWorks.Dal.Adapter</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.9.0-Beta-20220105" />
+    <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.9.1" />
   </ItemGroup>
 </Project>
