--- a/LLBLGenPro/DatabaseSpecific/AdventureWorks.Dal.AdapterDBSpecific.csproj
+++ b/LLBLGenPro/DatabaseSpecific/AdventureWorks.Dal.AdapterDBSpecific.csproj
@@ -6,6 +6,6 @@
     <RootNamespace>AdventureWorks.Dal.Adapter.DatabaseSpecific</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.0-Beta-20220105" />
+    <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.1" />
   </ItemGroup>
 </Project>
