--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -64,25 +64,25 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.123" />
-      <PackageReference Include="linq2db" Version="3.6.0" />
-      <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.0" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+      <PackageReference Include="linq2db" Version="4.1.1" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
       <PackageReference Include="EntityFramework" Version="6.4.4" />
       <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
-      <PackageReference Include="NHibernate" Version="5.3.10" />
+      <PackageReference Include="NHibernate" Version="5.3.12" />
       <PackageReference Include="NPoco" Version="5.3.2" />
       <PackageReference Include="NPoco.SqlServer" Version="5.3.2" />
-      <PackageReference Include="PetaPoco.Compiled" Version="6.0.480" />
-      <PackageReference Include="RepoDb" Version="1.12.9" />
-      <PackageReference Include="RepoDb.SqlServer" Version="1.1.4" />
-      <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.0-Beta-20220105" />
-      <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="5.13.2" />
+      <PackageReference Include="PetaPoco.Compiled" Version="6.0.524" />
+      <PackageReference Include="RepoDb" Version="1.12.10" />
+      <PackageReference Include="RepoDb.SqlServer" Version="1.1.5" />
+      <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.1" />
+      <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="6.1.0" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
       <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
-      <PackageReference Include="Tortuga.Anchor" Version="3.4.0" />
-      <PackageReference Include="Tortuga.Chain.CompiledMaterializers" Version="3.5.0" />
-      <PackageReference Include="Tortuga.Chain.Core" Version="3.5.0" />
-      <PackageReference Include="Tortuga.Chain.SqlServer" Version="3.5.0" />
+      <PackageReference Include="Tortuga.Anchor" Version="4.1.0" />
+      <PackageReference Include="Tortuga.Chain.CompiledMaterializers" Version="4.3.0" />
+      <PackageReference Include="Tortuga.Chain.Core" Version="4.3.0" />
+      <PackageReference Include="Tortuga.Chain.SqlServer" Version="4.3.0" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
     </ItemGroup>
 
