Added new EFCore NoChangeTrackingCompiledQueryBencher

--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -15,6 +15,7 @@
       <Compile Include="..\RawBencher\Benchers\EntityFrameworkCoreNoChangeTrackingBencher.cs" Link="Benchers\EntityFrameworkCoreNoChangeTrackingBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\EntityFrameworkCoreNormalBencher.cs" Link="Benchers\EntityFrameworkCoreNormalBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\EntityFrameworkCoreDTOBencher.cs" Link="Benchers\EntityFrameworkCoreDTOBencher.cs" />
+      <Compile Include="..\RawBencher\Benchers\EntityFrameworkCoreNoChangeTrackingCompiledQueryBencher.cs" Link="Benchers\EntityFrameworkCoreNoChangeTrackingCompiledQueryBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\EntityFrameworkNoChangeTrackingBencher.cs" Link="Benchers\EntityFrameworkNoChangeTrackingBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\EntityFrameworkNormalBencher.cs" Link="Benchers\EntityFrameworkNormalBencher.cs" />
       <Compile Include="..\RawBencher\Benchers\FetchOnlyBencherBase.cs" Link="Benchers\FetchOnlyBencherBase.cs" />
