--- a/RawBencher.Core/App.config
+++ b/RawBencher.Core/App.config
@@ -10,7 +10,7 @@
 		-->
 
 		<!-- <add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=llblgen5dev\SQLEXPRESS2016;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096" providerName="System.Data.SqlClient" /> -->
-		<add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=ATHENA\SQLEXPRESS2017;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096;Encrypt=False" providerName="System.Data.SqlClient" />
+		<add name="AdventureWorks.ConnectionString.SQL Server (SqlClient)" connectionString="data source=.\SQLEXPRESS;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096;Encrypt=False" providerName="System.Data.SqlClient" />
 		<add name="EF.ConnectionString.SQL Server (SqlClient)" connectionString="metadata=res://*/AW.csdl|res://*/AW.ssdl|res://*/AW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ATHENA\SQLEXPRESS2017;initial catalog=AdventureWorks;integrated security=SSPI;persist security info=False;packet size=4096;Encrypt=false&quot;" providerName="System.Data.EntityClient" />
 
 		<!-- note: LocalDB -->
