--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -60,15 +60,16 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="linq2db" Version="4.1.1" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.2.0" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="NPoco" Version="5.3.2" />
     <PackageReference Include="NPoco.SqlServer" Version="5.3.2" />
     <PackageReference Include="PetaPoco.Compiled" Version="6.0.524" />
-    <PackageReference Include="RepoDb" Version="1.12.10" />
-    <PackageReference Include="RepoDb.SqlServer" Version="1.1.5" />
+    <PackageReference Include="RepoDb.SqlServer">
+      <Version>1.13.0</Version>
+    </PackageReference>
     <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.2" />
     <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="6.1.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
@@ -77,7 +78,7 @@
     <PackageReference Include="Tortuga.Chain.CompiledMaterializers" Version="4.3.0" />
     <PackageReference Include="Tortuga.Chain.Core" Version="4.3.0" />
     <PackageReference Include="Tortuga.Chain.SqlServer" Version="4.3.0" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="NHibernate" Version="5.3.12" />
     <PackageReference Include="System.Reflection.Metadata" Version="6.0.1" />
   </ItemGroup>
