--- a/RawBencher.Core/RawBencher.Core.csproj
+++ b/RawBencher.Core/RawBencher.Core.csproj
@@ -66,18 +66,18 @@
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.123" />
       <PackageReference Include="linq2db" Version="5.0.0" />
-      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.3" />
       <PackageReference Include="EntityFramework" Version="6.4.4" />
       <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
-      <PackageReference Include="NHibernate" Version="5.4.0" />
+      <PackageReference Include="NHibernate" Version="5.4.1" />
       <PackageReference Include="NPoco" Version="5.7.0" />
       <PackageReference Include="NPoco.SqlServer" Version="5.7.0" />
       <PackageReference Include="PetaPoco.Compiled" Version="6.0.532" />
       <PackageReference Include="RepoDb.SqlServer" Version="1.13.0" />
-      <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.3-hotfix-20221118" />
-      <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="6.4.0" />
-      <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+      <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.10.0" />
+      <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="6.6.0" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
       <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
       <PackageReference Include="Tortuga.Anchor" Version="4.1.0" />
       <PackageReference Include="Tortuga.Chain.CompiledMaterializers" Version="4.3.0" />
