--- a/LLBLGenPro/DatabaseGeneric/AdventureWorks.Dal.Adapter.csproj
+++ b/LLBLGenPro/DatabaseGeneric/AdventureWorks.Dal.Adapter.csproj
@@ -6,6 +6,6 @@
     <RootNamespace>AdventureWorks.Dal.Adapter</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.9.3-hotfix-20221118" />
+    <PackageReference Include="SD.LLBLGen.Pro.ORMSupportClasses" Version="5.10.0" />
   </ItemGroup>
 </Project>
