--- a/RawBencher/RawBencher.csproj
+++ b/RawBencher/RawBencher.csproj
@@ -60,8 +60,8 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="linq2db" Version="5.0.0" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.2.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.5.0" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="NPoco" Version="5.7.0" />
@@ -70,17 +70,17 @@
     <PackageReference Include="RepoDb.SqlServer">
       <Version>1.13.0</Version>
     </PackageReference>
-    <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.9.3-hotfix-20221118" />
-    <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="6.4.0" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <PackageReference Include="SD.LLBLGen.Pro.DQE.SqlServer" Version="5.10.0" />
+    <PackageReference Include="ServiceStack.OrmLite.SqlServer" Version="6.6.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="Tortuga.Anchor" Version="4.1.0" />
     <PackageReference Include="Tortuga.Chain.CompiledMaterializers" Version="4.3.0" />
     <PackageReference Include="Tortuga.Chain.Core" Version="4.3.0" />
     <PackageReference Include="Tortuga.Chain.SqlServer" Version="4.3.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-    <PackageReference Include="NHibernate" Version="5.4.0" />
-    <PackageReference Include="System.Reflection.Metadata" Version="6.0.1" />
+    <PackageReference Include="NHibernate" Version="5.4.1" />
+    <PackageReference Include="System.Reflection.Metadata" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Benchers\BencherBase.cs" />
